<resources>
    <string name="app_name">Buscaminas</string>
    <string name="hello">¡Bienvenido!</string>
    <string name="desc">Introduce los parametros para crear el juego</string>
    <string name="width">Número de casillas para el ancho del tablero</string>
    <string name="height">Número de casillas para el alto del tablero</string>
    <string name="mines">Número de minas</string>
    <string name="create">Crear</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_too_low">El número es demasiado pequeño, debe haber más de 10</string>
    <string name="error_too_mines">Son demasiadas minas, deben ser menos del 40% del tablero</string>
</resources>