<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.daniel.buscaminas.view.game.GameActivity">

    <TextView
        android:id="@+id/text_hello"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/hello"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_hello"
        android:text="@string/desc" />

    <TextView
        android:id="@+id/text_width"
        android:textSize="15dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_desc"
        android:text="@string/width" />

    <EditText
        android:id="@+id/input_width"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_width"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:ems="10"
        android:text="10" />

    <TextView
        android:id="@+id/text_height"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input_width"
        android:text="@string/height" />

    <EditText
        android:id="@+id/input_height"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_height"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:ems="10"
        android:text="10" />

    <TextView
        android:id="@+id/text_mines"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input_height"
        android:text="@string/mines" />

    <EditText
        android:id="@+id/input_mines"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_mines"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:ems="10"
        android:text="10" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:background="@color/colorAccent"
        android:layout_below="@+id/input_mines"
        android:layout_centerHorizontal="true" />
</RelativeLayout>